--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	   			<img src="images/Discover/Slide3.jpg" style="width:100%">
 
 	   					<div class="w3-display-topmiddle">
-	 			  			 <a href="index.html"><img src="images/LogO.png" style="width:25%"></a>
+	 			  			 <a href="index.html"><img src="images/Logo.png" style="width:25%"></a>
 	 	  				</div><!--w3-display-topmiddle-->
 
 	   			 				<div class="w3-display-middle  w3-text-white" style=" font-family: 'Playfair Display', serif !important;">
