--- a/part1.html
+++ b/part1.html
@@ -8,28 +8,65 @@
 <link rel="icon" type="image/Logo_title.png" href="images/logo.png">
 <link rel="stylesheet" type="text/css" href="index.css">
 
-<title>CA Adventure - Shasta</title>
- <!-- Video from https://coverr.co/ -->
-<header>
-<div class="w3-display-topmiddle">
-                 <a href="index.html"><img src="images/logo.png" style=" width:15%"></a>
- </div><!--w3-display-topmiddle-->
+<title>CA Adventure | Discover </title>
+\
+ 
+<header class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4">
+  
+  <!-- Logo text or image -->
+  <div class="flex items-center justify-between mb-4 md:mb-0">
+    <h1 class="leading-none text-2xl text-grey-darkest">
+      <a class="no-underline text-grey-darkest hover:text-black" href="index.html">
+        <img src="images/logo.png" style=" width:30%"></a>
+      </a>
+    </h1>
+
+  </div>
+  <!-- END Logo text or image -->
+  
+
+  
+ <!-- Global navigation -->
+  <nav>
+    <ul class="list-reset md:flex md:items-center">
+      <li class="md:ml-4">
+        <a class="block no-underline hover:text-grey mr-5 py-2 text-grey-darkest hover:text-black md:border-none md:p-0" href="part2.html">
+          T A S T E &nbsp&nbsp
+        </a>
+      </li>
+      <li class="md:ml-4">
+        <a class="border-t block no-underline hover:text-grey mr-5  py-2 text-grey-darkest hover:text-black md:border-none md:p-0" href="part3.html">
+         E X P E R I E N C E &nbsp&nbsp
+        </a>
+
+      </li>
+      <li class="md:ml-4">
+        <a class="border-t block no-underline hover:text-grey  mr-5 py-2 text-grey-darkest hover:text-black md:border-none md:p-0" href="part1.html">
+          D I S C O V E R &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <!-- END Global navigation -->
+
+ </header>
+
 
   <div class="video-wrapper">
 
-    <video autoplay loop muted class="w-full px-0 py-12">
+    <video autoplay loop muted class="w-full">
       <source src="Video/Shasta.mp4" type="video/MP4">
 
     </video>
 
   </div>
 
-</header>
+
 
 
 
 <div class="font-serif leading-normal mx-auto py-12 px-4 max-w-lg">
-  <p class="mb-6 text-xl md:text-2xl uppercase">This is a simple parallax effect created by setting the background attachment property to a fixed position. This technique is not meant for non-decorative images, videos, etc. as those require additional HTML and CSS to work properly.</p>
+  <p class="mb-6 text-xl md:text-2xl uppercase"> "This is a simple parallax effect created by setting the background attachment property to a fixed position. This technique is not meant for non-decorative images, videos, etc. as those require additional HTML and CSS to work properly. "</p>
   <p class="mb-4 text-lg">Quae commodi reiciendis dignissimos. Rerum molestiae hic dolores assumenda dolor! Corrupti reiciendis maxime fuga, recusandae obcaecati officia cum temporibus dicta quibusdam praesentium, magni, cumque aperiam iusto sequi illum molestiae non.</p>
   <p class="mb-4 text-lg">In excepturi repellendus eum, qui corrupti rerum perferendis harum adipisci voluptate? Nihil, quidem deleniti libero officia dicta vel asperiores velit molestiae blanditiis, dolore voluptatibus excepturi laudantium at veniam illo. Dolor!</p>
   <p class="mb-4 text-lg">Neque laudantium minus doloremque id quas quod sint velit corporis unde dolore accusantium delectus optio consequuntur voluptatem sapiente odit dolorum minima harum tenetur, dolor provident reprehenderit. Ex eum provident harum?</p>
@@ -44,7 +81,7 @@
   <div class="bg-quote container flex items-center justify-center h-screen mx-auto">
   <blockquote class="bg-black font-serif mx-4 p-4 text-center text-white md:p-8">
     <p class="font-bold italic text-3xl">
-      &ldquo;Large, bold pull quote. Hats. Very good.&rdquo;
+      &ldquo; It's about the Journey&rdquo;
     </p>
   </blockquote>
 </div>
@@ -56,19 +93,5 @@
   <p class="mb-4 text-lg">Modi aliquam facilis adipisci! Soluta eveniet eos omnis, inventore nesciunt, laborum deserunt blanditiis nihil accusamus debitis voluptatibus possimus dolores vero maiores, sed voluptate ut! Facilis possimus vitae consectetur praesentium veritatis.</p>
   <p class="mb-4 text-lg">Tempore, quaerat accusamus ad nostrum maiores numquam, ea nam sed reiciendis, eveniet perspiciatis. Eos nulla vel consectetur quo nesciunt aspernatur sint nemo cumque optio mollitia, veritatis, tenetur quibusdam eum natus.</p>
 </div>
-
-
-  <div class="bg-header flex items-center justify-center py-24">
-  <div class="bg-grey font-serif mx-4 p-4 rounded-lg text-center md:p-8">
-    <p class="italic text-sm">
-      November 1, 2019
-    </p>
-    <h1 class="text-2xl uppercase md:text-3xl lg:text-5xl">
-      
-    </h1>
-    <p class="text-lg">
-      Author Name
-    </p>
-  </div>
 
 
