--- a/part2.html
+++ b/part2.html
@@ -8,13 +8,49 @@
 <link rel="icon" type="image/Logo_title.png" href="images/logo.png">
 <link rel="stylesheet" type="text/css" href="index.css">
 
-<title>CA Adventure - Yosemite</title>
- <!-- Video from https://coverr.co/ -->
-<header>
+<title>CA Adventure | Taste </title>
+\
+ 
+<header class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4">
+  
+  <!-- Logo text or image -->
+  <div class="flex items-center justify-between mb-4 md:mb-0">
+    <h1 class="leading-none text-2xl text-grey-darkest">
+      <a class="no-underline text-grey-darkest hover:text-black" href="index.html">
+        <img src="images/logo.png" style=" width:30%"></a>
+      </a>
+    </h1>
 
-<div class="w3-display-topmiddle">
-                 <a href="index.html"><img src="images/logo.png" style=" width:15%"></a>
- </div><!--w3-display-topmiddle-->
+  </div>
+  <!-- END Logo text or image -->
+  
+
+  
+ <!-- Global navigation -->
+    <nav>
+    <ul class="list-reset md:flex md:items-center">
+      <li class="md:ml-4">
+        <a class="block no-underline hover:text-grey mr-5 py-2 text-grey-darkest hover:text-black md:border-none md:p-0" href="part2.html">
+          T A S T E &nbsp&nbsp
+        </a>
+      </li>
+      <li class="md:ml-4">
+        <a class="border-t block no-underline hover:text-grey mr-5  py-2 text-grey-darkest hover:text-black md:border-none md:p-0" href="part3.html">
+         E X P E R I E N C E &nbsp&nbsp
+        </a>
+
+      </li>
+      <li class="md:ml-4">
+        <a class="border-t block no-underline hover:text-grey  mr-5 py-2 text-grey-darkest hover:text-black md:border-none md:p-0" href="part1.html">
+          D I S C O V E R &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <!-- END Global navigation -->
+
+ </header>
+
 
   <div class="video-wrapper">
 
@@ -25,7 +61,6 @@
 
   </div>
 
-</header>
 
 <div class="font-serif leading-normal mx-auto py-12 px-4 max-w-lg">
   <p class="mb-6 text-xl md:text-2xl uppercase">This is a simple parallax effect created by setting the background attachment property to a fixed position. This technique is not meant for non-decorative images, videos, etc. as those require additional HTML and CSS to work properly.</p>
