--- a/part2.html
+++ b/part2.html
@@ -4,14 +4,14 @@
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 <link href="indexstyle.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-<link rel="stylesheet" type="text/css" href="part1.css">
+<link rel="stylesheet" type="text/css" href="part2.css">
 <link rel="icon" type="image/Logo_title.png" href="images/logo.png">
 <link rel="stylesheet" type="text/css" href="index.css">
 
 <title>CA Adventure | Taste </title>
 \
  
-<header class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4">
+<header class=" md:flex md:items-center md:justify-between p-4 pb-0 md:pb-4">
   
   <!-- Logo text or image -->
   <div class="flex items-center justify-between mb-4 md:mb-0">
@@ -52,14 +52,10 @@
  </header>
 
 
-  <div class="video-wrapper">
+  <div class="bg-header flex items-center justify-center py-32">
 
-    <video autoplay loop muted class="w-full">
-      <source src="Video/Yosemite.mp4" type="video/MP4">
+</div>
 
-    </video>
-
-  </div>
 
 
 <div class="font-serif leading-normal mx-auto py-12 px-4 max-w-lg">
@@ -90,19 +86,5 @@
   <p class="mb-4 text-lg">Modi aliquam facilis adipisci! Soluta eveniet eos omnis, inventore nesciunt, laborum deserunt blanditiis nihil accusamus debitis voluptatibus possimus dolores vero maiores, sed voluptate ut! Facilis possimus vitae consectetur praesentium veritatis.</p>
   <p class="mb-4 text-lg">Tempore, quaerat accusamus ad nostrum maiores numquam, ea nam sed reiciendis, eveniet perspiciatis. Eos nulla vel consectetur quo nesciunt aspernatur sint nemo cumque optio mollitia, veritatis, tenetur quibusdam eum natus.</p>
 </div>
-
-
-  <div class="bg-header flex items-center justify-center py-24">
-  <div class="bg-grey font-serif mx-4 p-4 rounded-lg text-center md:p-8">
-    <p class="italic text-sm">
-      November 1, 2019
-    </p>
-    <h1 class="text-2xl uppercase md:text-3xl lg:text-5xl">
-      
-    </h1>
-    <p class="text-lg">
-      Author Name
-    </p>
-  </div>
 
 
