--- a/part3.html
+++ b/part3.html
@@ -94,6 +94,10 @@
   <p class="mb-4 text-lg">Tempore, quaerat accusamus ad nostrum maiores numquam, ea nam sed reiciendis, eveniet perspiciatis. Eos nulla vel consectetur quo nesciunt aspernatur sint nemo cumque optio mollitia, veritatis, tenetur quibusdam eum natus.</p>
 </div>
 
+  <div class="bg-bottom flex items-center justify-center py-24 ">
 
+  </div>
+
+ </div>
 
 
