--- a/part3.html
+++ b/part3.html
@@ -17,7 +17,7 @@
   <div class="flex items-center justify-between mb-4 md:mb-0">
     <h1 class="leading-none text-2xl text-grey-darkest">
       <a class="no-underline text-grey-darkest hover:text-black" href="index.html">
-        <img src="images/logo.png" style=" width:30%"></a>
+        <img src="images/Logo.png" style=" width:30%"></a>
       </a>
     </h1>
 
