--- a/part3.html
+++ b/part3.html
@@ -5,11 +5,11 @@
 <link href="indexstyle.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
 <link rel="stylesheet" type="text/css" href="part3.css">
-<link rel="icon" type="image/Logo_title.png" href="images/logo.png">
+<link rel="icon" type="image/Logo_title.png" href="images/Logo.png">
 <link rel="stylesheet" type="text/css" href="index.css">
 
 <title>CA Adventure | Experience </title>
-\
+
  
 <header class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4">
   
