--- a/part2.html
+++ b/part2.html
@@ -74,7 +74,7 @@
   <div class="bg-quote container flex items-center justify-center h-screen mx-auto">
   <blockquote class="bg-black font-serif mx-4 p-4 text-center text-white md:p-8">
     <p class="font-bold italic text-3xl">
-      &ldquo;Large, bold pull quote. Hats. Very good.&rdquo;
+      &ldquo;All you need is a good cup of coffee&rdquo;
     </p>
   </blockquote>
 </div>
